--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,4 +1,4 @@
 redactor_extension_controllers:
     resource: '../../vendor/bolt/redactor/src/Controller/'
     prefix: '%bolt.backend_url%/async'
-    type: annotation
+    type: attribute
