--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,7 +19,7 @@ doctrine:
         mappings:
             Redactor:
                 is_bundle: false
-                type: annotation
+                type: attribute
                 dir: '%kernel.project_dir%/vendor/bolt/redactor/src/Entity'
                 prefix: 'Bolt\Redactor'
                 alias: Redactor
